objects/PersonLifeEvent.object
<CustomObject>
    <fields>
        <fullName>API_CurrentEdStatus__c</fullName>
        <formula>TRIM(LEFT(TEXT( CurrentEdStatus__c ),FIND(&quot;:&quot;, TEXT( CurrentEdStatus__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_CurrentEdStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_CurrentSchoolAttend__c</fullName>
        <formula>TRIM(LEFT(TEXT( CurrentSchoolAttend__c ),FIND(&quot;:&quot;, TEXT( CurrentSchoolAttend__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_CurrentSchoolAttend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DataCollectionStage__c</fullName>
        <formula>TRIM(LEFT(TEXT( DataCollectionStage__c ),FIND(&quot;:&quot;, TEXT( DataCollectionStage__c ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DataCollectionStage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DateCreated__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE( CreatedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( CreatedDate ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DateCreated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DateDeleted__c</fullName>
        <formula>If(NOT(ISBLANK( DateDeleted__c )),

TEXT(YEAR(DATEVALUE( DateDeleted__c )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(DateDeleted__c))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(DateDeleted__c))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(DateDeleted__c),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DateDeleted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DateUpdated__c</fullName>
        <formula>If(NOT(ISBLANK( LastModifiedDate )),

TEXT(YEAR(DATEVALUE(LastModifiedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(LastModifiedDate),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DateUpdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_EventDate__c</fullName>
        <formula>If(NOT(ISBLANK( EventDate )),

TEXT(YEAR(DATEVALUE(EventDate)))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(EventDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(EventDate))), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <label>API_EventDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_MostRecentEdStatus__c</fullName>
        <formula>TRIM(LEFT(TEXT(MostRecentEdStatus__c),FIND(&quot;:&quot;, TEXT(MostRecentEdStatus__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_MostRecentEdStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentEdStatus__c</fullName>
        <label>Current Ed Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisCurrentEdStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentSchoolAttend__c</fullName>
        <label>Current School Attend</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisCurrentSchoolAttend</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataCollectionStage__c</fullName>
        <label>Data Collection Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisDataCollectionStage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateDeleted__c</fullName>
        <label>DateDeleted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExportID__c</fullName>
        <label>ExportID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MostRecentEdStatus__c</fullName>
        <label>Most Recent Ed Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisMostRecentEdStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Enrollment</label>
        <referenceTo>ProgramEnrollment</referenceTo>
        <relationshipLabel>Person Life Events</relationshipLabel>
        <relationshipName>Person_Life_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>HMIS_Life_Event</fullName>
        <active>true</active>
        <label>HMIS Life Event</label>
    </recordTypes>
</CustomObject>